--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "llee",
   "license": "ISC",
   "dependencies": {
+    "googleapis": "^39.2.0",
     "jira-client": "^6.21.1",
     "moment": "^2.29.1",
     "moment-business-days": "^1.2.0"
