--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Jira Issues Collector",
   "main": "issuesCollector.js",
   "scripts": {
-    "start": "babel-node issuesCollector.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prestart": "npm install",
+    "start": "babel-node issuesCollector.js"
   },
   "author": "llee",
   "license": "ISC",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-dotenv": "^0.1.1",
     "babel-preset-es2015": "^6.24.1"
   }
 }
